Modify routing path writing specifications
